<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@mipmap/ic_dialog_bg"
    android:minWidth="400dp"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="400dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/update_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/newest_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_newest_version"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_newest_file_size"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/update_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/dialog_update_content"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/update_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/upgrade_btn_selector"
            android:gravity="center"
            android:text="@string/dialog_upgrade_label"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/update_later_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/dialog_upgrade_later"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>


</FrameLayout>