<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@mipmap/ic_dialog_bg"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dialog_title"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/newest_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_newest_version"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/version_size_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_newest_file_size"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/dialog_update_content"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/update_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:maxLines="5"
            android:ellipsize="end"
            android:text="1、优化\n2、修复bug\n3、新增功能\n4、性能优化\n5、体验优化\n6\n7\n8"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/update_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_upgrade_label"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@drawable/upgrade_btn_selector"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/update_later_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_upgrade_later"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="8dp"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>